<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        android:text="@string/admin_panel"
        android:textColor="#2b2c69"
        android:textSize="24sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_viewSchedule"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:elevation="10dp"
        android:padding="16dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/schedule"
            android:textSize="22sp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView

        android:id="@+id/card_viewUpdate"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true"
        android:elevation="10dp"
        android:padding="16dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/update"
            android:textSize="22sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_viewChampionship"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:elevation="10dp"
        android:padding="16dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="1dp"
            android:text="@string/championship"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_viewFocused"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:elevation="10dp"
        android:padding="16dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="1dp"
            android:text="@string/add_focused_match"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>
</RelativeLayout>
